# relay

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  DEV.md  Dockerfile  NOTES.md  QWEN.md  README.md  ROADMAP.md  SDK.md  analise_projeto_dir.md  compose.yaml  dev-testing-mail.md  proposta-adaptação.md  relay-smtp.md
.github/ISSUE_TEMPLATE/: bounce---fbl-parsing-issue.md  bounce-fbl-parsing-issue.md
.github/workflows/: build.yaml  ci.yaml  zip-deploy.yaml
api/: .env  .env.dev  composer.json
backend/: .env  .env.dev  .env.test  .gitignore  composer.json  mago.toml  phpstan.dist.neon  phpunit.dist.xml
backend/config/: bundles.php  reference.php  services.php
backend/migrations/: Version20250407093657.php  Version20250418134054.php  Version20250607093657.php  Version20250607093658.php  Version20250607093659.php  Version20250609112605.php  Version20250609112606.php  Version20250612052227.php  Version20250613093659.php  Version20250613112606.php  Version20250613150000.php  Version20250619104621.php  Version20250623164704.php  Version20250624093228.php  Version20250626162153.php  Version20250630150236.php  Version20250707174213.php  Version20250715163327.php  Version20250720193633.php  Version20250726103642.php  Version20250729173434.php  Version20250731232854.php  Version20250802223829.php  Version20250812144231.php  Version20250812223531.php  Version20250825180500.php  Version20251016101939.php  Version20251027161113.php  Version20251119041929.php  Version20251125025738.php  (+8 more)
benchmark/: Makefile  benchmark.compose.yaml  benchmark.js
deploy/: .gitignore  zip.sh
deploy/easy/: .env  (+2 more)
docs/: hosting.md
frontend/: bun.lockb  package-lock.json  package.json  svelte.config.js  vite.config.ts
relay-python/: README.md  docker-compose.yml  pyproject.toml
relay-python/app/: __init__.py  main.py
relay-python/app/application/: __init__.py  send_service.py
relay-python/app/core/: __init__.py  config.py  database.py  logging.py
relay-python/app/domain/: __init__.py  entities.py  enums.py
relay-python/app/interfaces/http/: __init__.py  routes.py
relay-python/app/observability/: __init__.py  metrics.py
relay-python/app/providers/: __init__.py  base.py  provider_factory.py  sendgrid_provider.py  smtp_provider.py
relay-python/app/repositories/: __init__.py  models.py  repositories.py
relay-python/app/schemas/: __init__.py  email.py
relay-python/app/workers/: __init__.py  celery_app.py  tasks.py
relay-python/docker/: Dockerfile.api  Dockerfile.worker
relay-python/migrations/: alembic.ini  env.py
worker/: .air.toml  .env  .env.example  .gitignore  Makefile  README.md  bounce_handler.go  bounce_server.go  bounces.go  config.go  dns.go  dns_test.go  email_worker.go  email_worker_test.go  go.mod  go.sum  helper.go  helper_test.go  http.go  http_test.go  incoming_debug.go  incoming_handler.go  incoming_handler_test.go  incoming_server.go  incoming_server_test.go  local_api.go  local_api_test.go  main.go  metrics.go  metrics_test.go  mx.go  mx_test.go  pg.go  pg_incoming.go  pg_send.go  pg_test.go  pg_webhooks.go  send.go  send_pg.go  send_test.go  (+12 more)
(+952 files in other folders)
